# tonic_validate

./: .gitignore  LICENSE  README.md  new_README.md  pypi_readme.md  pyproject.toml  sample_questions.json  tonic_validate.code-workspace
.github/workflows/: python-install-and-use-e2e.yml  python-publish.yml  tonic_validate_run_on_pr.yml
docs/source/: conf.py  index.rst
examples/: individual_scorers_example.ipynb  question_and_answer_list.json  quickstart_example_paul_graham_essays.ipynb  quickstart_gemini.ipynb  quickstart_llama_index.ipynb  quickstart_simple.ipynb  rag_metrics_sweep_analysis.ipynb  test.ipynb
examples/chatbees_vs_openai/: all_essays_in_single_file.txt  cb_run.csv  chatbees_rag_vs_openai_rag.ipynb
examples/customgpt_vs_openai/: customgpt_rag_vs_openai_rag.ipynb  customgpt_run.csv  openai_run.csv
examples/haystack_vs_openai/: customgpt_rag_vs_openai_rag.ipynb  customgpt_run.csv  openai_run.csv  qa_pairs.json
examples/llamaindex_webinar/: llamaindex_webinar.ipynb
examples/logging_examples/: paul_graham_essays_quickstart.ipynb  paul_graham_essays_quickstart_no_reference_answers.ipynb
examples/openai_vs_customgpt/: customgpt_rag_vs_openai_rag.ipynb  customgpt_run.csv  openai_run.csv
examples/openai_vs_vertex/: combined_6_essays.txt  openai_run.csv  qa_pairs.json  vertex_rag_vs_openai_rag.ipynb  vertex_run.csv
examples/paul_graham_essays/: 13sentences.txt  5founders.txt  alien.txt  angelinvesting.txt  badeconomy.txt  before.txt  better.txt  college.txt  conformism.txt  control.txt  corpdev.txt  diff.txt  divergence.txt  donate.txt  ecw.txt  equity.txt  essay.txt  ffb.txt  founders.txt  foundersatwork.txt  foundervisa.txt  fp.txt  gh.txt  good.txt  googles.txt  highres.txt  hp.txt  hs.txt  hubs.txt  (+48 more)
tonic_validate/: __init__.py  config.py  validate_api.py  validate_monitorer.py  validate_scorer.py
tval/: __init__.py  llm_calls.py  openai_api_util.py  rag_scores_calculator.py
tvallogging/: api.py  logging_util.py
tvalmetrics/: __init__.py  llm_calls.py  openai_api_util.py  rag_scores_calculator.py  validate_api.py  validate_logger.py  validate_scorer.py
(+338 files in other folders)
