[tool.poetry]
name = "tonic-validate"
version = "3.3.0"
description = "RAG evaluation metrics."
authors = ["Joe Ferrara <joeferrara@tonic.ai>", "Ethan Philpott <ephilpott@tonic.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
openai = ">=1.0.0"
tiktoken = "^0.5.2"
appdirs = "^1.4.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.2.0"
ruff = "^0.1.15"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
