[tool.poetry]
name = "tonic-validate"
version = "6.0.0"
description = "RAG evaluation metrics."
authors = ["Joe Ferrara <joeferrara@tonic.ai>", "Ethan Philpott <ephilpott@tonic.ai>", "Adam Kamor <adam@tonic.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
openai = ">=1.0.0"
tiktoken = ">=0.5.2,<0.7.0"
appdirs = "^1.4.4"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
pydantic = "^2.6.4"
typing-extensions = "^4.10.0"
litellm = "^1.35.8"
google-generativeai = { version = "^0.5.2", python = ">=3.9" }

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = ">=1.2,<3.0"
ruff = ">=0.1.15,<0.5.0"
tonic-textual = "^1.0.5"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
